# resume-studio

./: README.md  index.html  package-lock.json  package.json
scripts/: build.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.tsx  Editor.tsx  FileTree.tsx  NewVariantDialog.tsx  PdfPreview.tsx  SettingsDialog.tsx  StructuredEditor.tsx  Toast.tsx  Toolbar.tsx  UploadDialog.tsx
src/lib/: tauri.ts
