[package]
name = "resume-studio"
version = "0.1.0"
description = "Local resume editor — Typst → PDF + upload to dworks"
authors = ["Dennis Sheehan"]
edition = "2021"

[lib]
name = "resume_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dirs = "5"
